# LLM-Evaluation-Pipeline

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile.serve  Makefile  PLAN.md  README.md  pyproject.toml
.claude/: CLAUDE.md
.cursor/rules/: logging-and-errors.md  python-standards.md  testing.md
.devin/: config.json
.devin/skills/check-standards/: SKILL.md
.devin/skills/improve-bench/: SKILL.md
.devin/skills/perf-test/: SKILL.md
.devin/skills/run-eval/: SKILL.md
.devin/skills/start-vllm/: SKILL.md
.github/workflows/: ci.yml
common/: __init__.py  cache.py  config.py  errors.py  logging.py  result_log.py  stats.py  tokenization.py  types.py  vllm_client.py
docs/: cloud-setup.md  colab-oneshot.md  enterprise-standards.md  improvement-log.md  problem-statement.md
docs/adr/: 0001-vllm-as-serving-backend.md
eval_runner/: README.md  __init__.py  run_eval.py  vllm_model.py
eval_runner/tasks/: custom_data.jsonl  custom_task.yaml
guardrails/: README.md  __init__.py  validate.py
guardrails/schemas/: hellaswag_option_index.json  mcq_letter.json  short_answer.json
improve/: README.md  __init__.py  eval.sh  infer.py  optimize_prompt.py  prepare_data.py  report.md  sweep.py
notebooks/: colab_run.ipynb
perf/: README.md  __init__.py  analysis.ipynb  gpu_monitor.py  load_test.py  metrics.py
results/: analysis.ipynb  custom_qa.json  determinism_report.json  hellaswag.json  mmlu_stem.json  result-log.csv  result-log.md  run_meta.json  summary.md
results/improve/: baseline.json  byte_norm.json  clean_length_norm.json  clean_prompt.json  fewshot_random_5.json  fewshot_semantic_5.json  hellaswag_eval.jsonl  hellaswag_fewshot_pool.jsonl  length_norm.json
results/perf/: metrics.csv  summary.csv
scripts/: bootstrap.sh  cloud_bootstrap.sh  smoke.sh
serve/: README.md  __init__.py  client.py  serve.py
serve/examples/: __init__.py  concurrent_demo.py  demo.py
tests/: conftest.py
tests/common/: test_cache.py  test_config.py  test_errors.py  test_logging.py  test_result_log.py  test_stats.py  test_types.py  test_vllm_client.py
tests/eval_runner/: __init__.py  test_custom_data.py  test_run_eval.py  test_vllm_model.py
tests/guardrails/: __init__.py  test_cli.py  test_determinism.py  test_hellaswag_schema.py  test_validate.py
tests/improve/: __init__.py  test_infer.py  test_optimize_prompt.py  test_sweep.py
tests/perf/: __init__.py  test_gpu_monitor.py  test_load_test.py  test_metrics.py
tests/serve/: __init__.py  test_client.py  test_examples.py  test_serve.py
