[project]
name = "llm-eval-system"
version = "0.1.0"
description = "Scaled-down LLM evaluation pipeline built on vLLM + lm-evaluation-harness."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Harshit Bansal" }]

# Minimal runtime deps used by `common/` and any script that doesn't need vLLM itself.
# Heavy deps (vllm, lm-eval, pandas) live in optional-dependencies so they only get
# installed for the parts that need them.
dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "structlog>=24.1,<25.0",
    "numpy>=1.26,<3.0",
]

[project.optional-dependencies]
serve = [
    "vllm>=0.6,<1.0",
]
eval = [
    "lm-eval>=0.4,<0.5",
    "datasets>=2.20,<4.0",
    "transformers>=4.43,<5.0",
    "torch>=2.3,<3.0",
]
perf = [
    "pandas>=2.2,<3.0",
    "matplotlib>=3.9,<4.0",
    "seaborn>=0.13,<1.0",
    "jupyter>=1.0,<2.0",
    "nbconvert>=7.16,<8.0",
]
improve = [
    "sentence-transformers>=3.0,<5.0",
    "scipy>=1.13,<2.0",
    "scikit-learn>=1.5,<2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6,<1.0",
    "mypy>=1.11,<2.0",
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<2.0",
    "pytest-cov>=5.0,<7.0",
    "pre-commit>=3.8,<5.0",
    "detect-secrets>=1.5,<2.0",
    "types-setuptools",
    "types-pyyaml>=6.0.12.20260408",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common", "serve", "eval_runner", "perf", "guardrails", "improve"]

[tool.hatch.build.targets.wheel.sources]
# Keep wheel layout flat; tolerate missing part folders during Phase 0.

[tool.uv]
default-groups = ["dev"]

# ---------------------------------------------------------------------------
# Ruff: lint + format (replaces black/isort/flake8).
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks", "results", ".cache"]

[tool.ruff.lint]
# Pragmatic ruleset — high-signal categories, skip nitpicky ones.
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "PL",   # pylint (select)
    "ASYNC", # asyncio anti-patterns
]
ignore = [
    "E501",    # handled by formatter
    "PLR0913", # too many args — fine for config/data classes
    "PLR2004", # magic values in tests
    "SIM108",  # ternary-vs-if — stylistic
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["PLR2004", "S101", "N802", "PLC0415"]
"scripts/**/*" = ["PLR2004"]
"**/*.ipynb" = ["E402", "F401"]
# eval_runner deliberately lazy-imports lm-eval / transformers / vllm_client so
# the module stays importable without the optional `eval` extra installed.
"eval_runner/vllm_model.py" = ["PLC0415"]
"eval_runner/run_eval.py" = ["PLC0415"]

[tool.ruff.lint.isort]
known-first-party = ["common", "serve", "eval_runner", "perf", "guardrails", "improve"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ---------------------------------------------------------------------------
# Mypy: type-checking. Balanced — strict only where we own the code.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["build/", "dist/", "\\.venv/", "results/", "\\.cache/"]

[[tool.mypy.overrides]]
module = ["common.*"]
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "serve.*",
    "eval_runner.*",
    "guardrails.*",
    "improve.*",
    "perf.*",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["tests.*", "scripts.*"]
# Scripts and tests get a pass on strict type checking.
disallow_untyped_defs = false

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=common",
    "--cov-report=term-missing",
]
markers = [
    "integration: tests that require a running vLLM server (deselect with -m 'not integration')",
    "gpu: tests that require a GPU",
    "slow: long-running tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
]

[tool.coverage.run]
branch = true
source = ["common"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
